cmake_minimum_required(VERSION 3.14)
project(C_Programming C)

set(CMAKE_C_STANDARD 99)

add_executable(helloworld helloworld.c)
add_executable(for for.c)
add_executable(datatype datatype.c)
add_executable(float_min_max float_min_max.c)
add_executable(variable variable.c)
add_executable(constants constants.c)
add_executable(static static.c)
add_executable(extern extern.c extern2.c )
add_executable(arithmetic_operators arithmetic_operators.c)
add_executable(relational_operators relational_operators.c)
add_executable(logical_operators logical_operators.c)
add_executable(bitwise_operators bitwise_operators.c)
add_executable(assignment_operators assignment_operators.c)
add_executable(other_operators other_operators.c)
add_executable(putchar_getchar putchar_getchar.c)
add_executable(if if.c)
add_executable(gets_puts gets_puts.c)
add_executable(scanf_printf scanf_printf.c)
add_executable(write_file cmake-build-debug/write_file.c)
add_executable(read_file read_file.c)